--- a/hadoop-docker/hadoop.env
+++ b/hadoop-docker/hadoop.env
@@ -9,21 +9,21 @@ HDFS_CONF_dfs_permissions_enabled=false
 HDFS_CONF_dfs_namenode_datanode_registration_ip___hostname___check=false
 
 YARN_CONF_yarn_log___aggregation___enable=true
-YARN_CONF_yarn_log_server_url=http://node-master.lan:8188/applicationhistory/logs/
+YARN_CONF_yarn_log_server_url=http://node-2.lan:8188/applicationhistory/logs/
 YARN_CONF_yarn_resourcemanager_recovery_enabled=true
 YARN_CONF_yarn_resourcemanager_store_class=org.apache.hadoop.yarn.server.resourcemanager.recovery.FileSystemRMStateStore
-YARN_CONF_yarn_resourcemanager_scheduler_class=org.apache.hadoop.yarn.server.resourcemanager.scheduler.capacity.CapacityScheduler
+YARN_CONF_yarn_resourcemanager_scheduler_class=org.apache.hadoop.yarn.server.resourcemanager.scheduler.fair.FairScheduler
 YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___mb=8192
 YARN_CONF_yarn_scheduler_capacity_root_default_maximum___allocation___vcores=4
 YARN_CONF_yarn_resourcemanager_fs_state___store_uri=/rmstate
 YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled=true
-YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
-YARN_CONF_yarn_resourcemanager_address=resourcemanager:8032
-YARN_CONF_yarn_resourcemanager_scheduler_address=resourcemanager:8030
-YARN_CONF_yarn_resourcemanager_resource__tracker_address=resourcemanager:8031
+YARN_CONF_yarn_resourcemanager_hostname=node-1.lan
+YARN_CONF_yarn_resourcemanager_address=node-1.lan:8032
+YARN_CONF_yarn_resourcemanager_scheduler_address=node-1.lan:8030
+YARN_CONF_yarn_resourcemanager_resource__tracker_address=node-1.lan:8031
 YARN_CONF_yarn_timeline___service_enabled=true
 YARN_CONF_yarn_timeline___service_generic___application___history_enabled=true
-YARN_CONF_yarn_timeline___service_hostname=historyserver
+YARN_CONF_yarn_timeline___service_hostname=node-2.lan
 YARN_CONF_mapreduce_map_output_compress=true
 YARN_CONF_mapred_map_output_compress_codec=org.apache.hadoop.io.compress.SnappyCodec
 YARN_CONF_yarn_nodemanager_resource_memory___mb=16384
